<resources>
    <string name="app_name">WorkForDay</string>

    <string name="set_password">SET PASSWORD</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">Sign Up</string>


    <!--validation-->
    <string name="enter_your_name">Enter your Name</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="valid_password">Between 6 and 12 alphanumeric characters</string>

    <!--navigation-->
    <string name="sign">sign in</string>
    <string name="saved">saved</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="title_activity_maps">Map</string>

    <string name="Add">Add</string>

    <string name="work_application">Work Application</string>
    <string name="add_work_application">Add Work Apllication</string>
    <string name="add_hashtags">ADD HASHTAGS</string>
    <string name="add_hashtag">Add Hashtag</string>
    <string name="description">DESCRIPTION</string>
    <string name="phone_numbers">PHONE NUMBERS</string>
    <string name="add_phone">Add phone</string>
    <string name="enter_description">Enter description</string>
    <string name="user_info">UserInfo</string>
    <string name="user_info_name">name</string>
    <string name="user_info_phones">phones</string>
    <string name="user_info_email">email</string>
    <string name="budget">BUDGET</string>
    <string name="enter_budget">Enter budget</string>
    <string name="name">NAME</string>
    <string name="title">TITLE</string>

</resources>
