<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity"
    tools:ignore="HardcodedText">

    <ImageButton
        android:id="@+id/sing_up_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_arrow" />

    <ImageView
        android:id="@+id/sing_up_logo"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sing_up_input_full_name"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"

            android:textColorHint="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sing_up_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_profile_icon"
                android:drawableLeft="@drawable/ic_profile_icon"
                android:drawablePadding="15dp"
                android:hint="@string/full_name"
                android:background="@null"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sing_up_input_email"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="23dp"
            android:textColorHint="@color/text_color">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sing_up_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_email_icon"
                android:drawableLeft="@drawable/ic_email_icon"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sing_up_input_password"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="23dp"
            android:textColorHint="@color/text_color">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sing_up_set_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawableLeft="@drawable/ic_password_lock"
                android:drawablePadding="15dp"
                android:hint="@string/set_password"
                android:background="@null"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sing_up_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_rounded"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/color_accent" />
    </LinearLayout>
</RelativeLayout>